Add instructions to run with JDK9